--- a/.mozilla/chrome/userChrome.css
+++ b/.mozilla/chrome/userChrome.css
@@ -1,160 +1,461 @@
-/* S E T T I N G S */
+/*---+---+---+---+---+---+
+ | C | O | N | F | I | G |
+ +---+---+---+---+---+---*/
+
+    /*---+---+---+---+---+---+---+
+     | C | O | L | O | U | R | S |
+     +---+---+---+---+---+---+---*/
+
+    @media (prefers-color-scheme: dark) { :root {
+
+        --window-colour:                     #05080a;
+        --secondary-colour:                  #1E2021;
+        --inverted-colour:                   #FAFAFC;
+
+        /* Containter Tab Colours */
+        --uc-identity-colour-blue:            #7ED6DF;
+        --uc-identity-colour-turquoise:       #55E6C1;
+        --uc-identity-colour-green:           #B8E994;
+        --uc-identity-colour-yellow:          #F7D794;
+        --uc-identity-colour-orange:          #F19066;
+        --uc-identity-colour-red:             #FC5C65;
+        --uc-identity-colour-pink:            #F78FB3;
+        --uc-identity-colour-purple:          #786FA6;
+
+        --uc-identity-colour-blue-muted:      #7ED6DF99;
+        --uc-identity-colour-turquoise-muted: #55E6C199;
+        --uc-identity-colour-green-muted:     #B8E99499;
+        --uc-identity-colour-yellow-muted:    #F7D794CC;
+        --uc-identity-colour-orange-muted:    #F19066FF;
+        --uc-identity-colour-red-muted:       #FC5C65FF;
+        --uc-identity-colour-pink-muted:      #F78FB399;
+        --uc-identity-colour-purple-muted:    #786FA6FF;
+
+    }}
+
+
+
+    @media (prefers-color-scheme: light) { :root {
+
+        --window-colour:                     #FAFAFC;
+        --secondary-colour:                  #EAEAEC;
+        --inverted-colour:                   #1E2021;
+
+        /* Containter Tab Colours */
+        --uc-identity-colour-blue:            #1D65F5;
+        --uc-identity-colour-turquoise:       #209FB5;
+        --uc-identity-colour-green:           #40A02B;
+        --uc-identity-colour-yellow:          #E49320;
+        --uc-identity-colour-orange:          #FE640B;
+        --uc-identity-colour-red:             #FC5C65;
+        --uc-identity-colour-pink:            #EC83D0;
+        --uc-identity-colour-purple:          #822FEE;
+
+        --uc-identity-colour-blue-muted:      #1D65F5FF;
+        --uc-identity-colour-turquoise-muted: #209FB5FF;
+        --uc-identity-colour-green-muted:     #40A02BFF;
+        --uc-identity-colour-yellow-muted:    #E49320FF;
+        --uc-identity-colour-orange-muted:    #FE640BFF;
+        --uc-identity-colour-red-muted:       #FC5C65FF;
+        --uc-identity-colour-pink-muted:      #EC83D0FF;
+        --uc-identity-colour-purple-muted:    #822FEEFF;
+
+    }}
+
+
 
 :root {
-  --navbarWidth     : 35vw; /* Set width of navbar. Use px for a fixed width 
-                                or vw for a percentage of your window. */
-  --animationSpeed  : 0.15s;
+
+    /* URL colour in URL bar suggestions */
+    --urlbar-popup-url-color: var(--uc-identity-colour-purple) !important;
+
+
+    /*---+---+---+---+---+---+---+
+     | V | I | S | U | A | L | S |
+     +---+---+---+---+---+---+---*/
+
+    /* global border radius */
+    --uc-border-radius: 0;
+
+    /* dynamic url bar width settings */
+    --uc-urlbar-width: clamp(200px, 40vw, 500px);
+
+    /* dynamic tab width settings */
+    --uc-active-tab-width:   clamp(100px, 20vw, 300px);
+    --uc-inactive-tab-width: clamp( 50px, 15vw, 200px);
+
+    /* if active always shows the tab close button */
+    --show-tab-close-button: none; /* DEFAULT: -moz-inline-box; */
+
+    /* if active only shows the tab close button on hover*/
+    --show-tab-close-button-hover: none; /* DEFAULT: -moz-inline-box; */
+
+    /* adds left and right margin to the container-tabs indicator */
+    --container-tabs-indicator-margin: 10px;
+
 }
 
-/* H I D I N G   E L E M E N T S */
-/* Comment or uncomment depending of what elements you want to hide */
+    /*---+---+---+---+---+---+---+
+     | B | U | T | T | O | N | S |
+     +---+---+---+---+---+---+---*/
 
-/* Back button */
-/* #back-button { display: none !important } */
+     #back-button,
+     #forward-button { display: none !important; }
 
-/* Hide back button only when disabled */
-#back-button[disabled="true"] { display: none !important }
+     /* bookmark icon */
+     #star-button{ display: none !important; }
 
-/* Forward button */
-/* #forward-button { display: none !important } */
+     /* zoom indicator */
+     #urlbar-zoom-button { display: none !important; }
 
-/* Hide forward button only when disabled */
-#forward-button[disabled="true"] { display: none !important }
+     /* Make button small as Possible, hidden out of sight */
+     #PanelUI-button { margin-top: -5px; margin-bottom: 44px; }
 
-/* "Shield" icon */
-#tracking-protection-icon-container { display: none !important }
+     #PanelUI-menu-button {
 
-/* Site information button */
-#identity-box { display: none !important }
+        padding: 0px !important;
+        max-height: 1px;
 
-/* This is the "Search with" indicator on the urlbar */
-/* #urlbar-search-mode-indicator { display: none !important } */
+        list-style-image: none !important;
 
-/* Zoom button */
-/* #urlbar-zoom-button { display: none !important } */
+     }
 
-/* Page action (right three dash button) */
-/* #pageActionButton { display: none !important } */
+     #PanelUI-menu-button .toolbarbutton-icon { width: 1px !important; }
+     #PanelUI-menu-button .toolbarbutton-badge-stack { padding: 0px !important; }
 
-/* These are the buttons on the right of the urlbar */
-/* #page-action-buttons { display: none !important } */
+     #reader-mode-button{ display: none !important; }
 
-/* #urlbar-label-box { display: none !important } */
+     /* tracking protection shield icon */
+     #tracking-protection-icon-container { display: none !important; }
 
-/* This one is the hamburger menu! */
-/* CAUTION: if you hide this some popups may be bugged */
-/* #PanelUI-button { display: none !important } */
+     /* #identity-box { display: none !important } /* hides encryption AND permission items */
+     #identity-permission-box { display: none !important; } /* only hides permission items */
 
-/* Tab close button */
- .tab-close-button { display: none !important } 
+     /* e.g. playing indicator (secondary - not icon) */
+     .tab-secondary-label { display: none !important; }
 
-/* Enable this to show the tab close button when hovering the tab */
-/* .tabbrowser-tab:hover .tab-close-button { display: -moz-inline-box !important } */
+     #pageActionButton { display: none !important; }
+     #page-action-buttons { display: none !important; }
 
-/*============================================================================*/
+     #urlbar-go-button { display: none !important; }
 
 
-/* Oneline tweak */
 
-#TabsToolbar {
-  margin-left : var(--navbarWidth) !important;
+
+
+/*=============================================================================================*/
+
+
+/*---+---+---+---+---+---+
+ | L | A | Y | O | U | T |
+ +---+---+---+---+---+---*/
+
+/* No need to change anything below this comment.
+ * Just tweak it if you want to tweak the overall layout. c: */
+
+:root {
+
+    --uc-theme-colour:                          var(--window-colour,    var(--toolbar-bgcolor));
+    --uc-hover-colour:                          var(--secondary-colour, rgba(0, 0, 0, 0.2));
+    --uc-inverted-colour:                       var(--inverted-colour,  var(--toolbar-color));
+
+    --button-bgcolor:                           var(--uc-theme-colour)    !important;
+    --button-hover-bgcolor:                     var(--uc-hover-colour)    !important;
+    --button-active-bgcolor:                    var(--uc-hover-colour)    !important;
+
+    --toolbarbutton-border-radius:              var(--uc-border-radius)   !important;
+
+    --tab-border-radius:                        var(--uc-border-radius)   !important;
+    --lwt-text-color:                           var(--uc-inverted-colour) !important;
+    --lwt-tab-text:                             var(--uc-inverted-colour) !important;
+
+    --arrowpanel-border-radius:                 var(--uc-border-radius)   !important;
+
+    --tab-block-margin: 2px !important;
+
 }
+
+
+
+
+
+window,
+#main-window,
+#toolbar-menubar,
+#TabsToolbar,
+#PersonalToolbar,
+#navigator-toolbox,
+#sidebar-box,
+#nav-bar {
+
+    -moz-appearance: none !important;
+
+    border: none !important;
+    box-shadow: none !important;
+    background: var(--uc-theme-colour) !important;
+
+}
+
+
+
+
+
+/* grey out ccons inside the toolbar to make it
+ * more aligned with the Black & White colour look */
+#PersonalToolbar toolbarbutton:not(:hover),
+#bookmarks-toolbar-button:not(:hover) { filter: grayscale(1) !important; }
+
+
+/* remove window control buttons */
+.titlebar-buttonbox-container { display: none !important; }
+
+
+/* remove "padding" left and right from tabs */
+.titlebar-spacer { display: none !important; }
+
+
+
+
+
+/* remove gap after pinned tabs */
+#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])
+    > #tabbrowser-arrowscrollbox
+    > .tabbrowser-tab[first-visible-unpinned-tab] { margin-inline-start: 0 !important; }
+
+
+/* remove tab shadow */
+.tabbrowser-tab
+    >.tab-stack
+    > .tab-background { box-shadow: none !important;  }
+
+
+/* tab background */
+.tabbrowser-tab
+    > .tab-stack
+    > .tab-background { background: var(--uc-theme-colour) !important; }
+
+
+/* active tab background */
+.tabbrowser-tab[selected]
+    > .tab-stack
+    > .tab-background { background: var(--uc-hover-colour) !important; }
+
+
+/* multi tab selection */
+#tabbrowser-tabs:not([noshadowfortests]) .tabbrowser-tab:is([visuallyselected=true], [multiselected]) > .tab-stack > .tab-background:-moz-lwtheme { background: var(--uc-hover-colour) !important; }
+
+
+/* tab close button options */
+.tabbrowser-tab:not([pinned]) .tab-close-button { display: var(--show-tab-close-button) !important; }
+.tabbrowser-tab:not([pinned]):hover .tab-close-button { display: var(--show-tab-close-button-hover) !important }
+
+
+/* adaptive tab width */
+.tabbrowser-tab[selected][fadein]:not([pinned]) { max-width: var(--uc-active-tab-width) !important; }
+.tabbrowser-tab[fadein]:not([selected]):not([pinned]) { max-width: var(--uc-inactive-tab-width) !important; }
+
+
+/* container tabs indicator */
+.tabbrowser-tab[usercontextid]
+    > .tab-stack
+    > .tab-background
+    > .tab-context-line {
+
+        margin: -1px var(--container-tabs-indicator-margin) 0 var(--container-tabs-indicator-margin) !important;
+        height: 1px !important;
+
+        border-radius: var(--tab-border-radius) !important;
+        box-shadow: 0 1px 10px 1px var(--uc-identity-gradient-colour) !important;
+
+}
+
+
+/* show favicon when media is playing but tab is hovered */
+.tab-icon-image:not([pinned]) { opacity: 1 !important; }
+
+
+/* Makes the speaker icon to always appear if the tab is playing (not only on hover) */
+.tab-icon-overlay:not([crashed]),
+.tab-icon-overlay[pinned][crashed][selected] {
+
+  top: 5px !important;
+  z-index: 1 !important;
+
+  padding: 1.5px !important;
+  inset-inline-end: -8px !important;
+  width: 16px !important; height: 16px !important;
+
+  border-radius: 10px !important;
+
+}
+
+
+/* style and position speaker icon */
+.tab-icon-overlay:not([sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]) {
+
+  stroke: transparent !important;
+  background: transparent !important;
+  opacity: 1 !important; fill-opacity: 0.8 !important;
+
+  color: currentColor !important;
+
+  stroke: var(--uc-theme-colour) !important;
+  background-color: var(--uc-theme-colour) !important;
+
+}
+
+
+/* change the colours of the speaker icon on active tab to match tab colours */
+.tabbrowser-tab[selected] .tab-icon-overlay:not([sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]) {
+
+  stroke: var(--uc-hover-colour) !important;
+  background-color: var(--uc-hover-colour) !important;
+
+}
+
+
+.tab-icon-overlay:not([pinned], [sharing], [crashed]):is([soundplaying], [muted], [activemedia-blocked]) { margin-inline-end: 9.5px !important; }
+
+
+.tabbrowser-tab:not([image]) .tab-icon-overlay:not([pinned], [sharing], [crashed]) {
+
+  top: 0 !important;
+
+  padding: 0 !important;
+  margin-inline-end: 5.5px !important;
+  inset-inline-end: 0 !important;
+
+}
+
+
+.tab-icon-overlay:not([crashed])[soundplaying]:hover,
+.tab-icon-overlay:not([crashed])[muted]:hover,
+.tab-icon-overlay:not([crashed])[activemedia-blocked]:hover {
+
+    color: currentColor !important;
+    stroke: var(--uc-inverted-colour) !important;
+    background-color: var(--uc-inverted-colour) !important;
+    fill-opacity: 0.95 !important;
+
+}
+
+
+.tabbrowser-tab[selected] .tab-icon-overlay:not([crashed])[soundplaying]:hover,
+.tabbrowser-tab[selected] .tab-icon-overlay:not([crashed])[muted]:hover,
+.tabbrowser-tab[selected] .tab-icon-overlay:not([crashed])[activemedia-blocked]:hover {
+
+    color: currentColor !important;
+    stroke: var(--uc-inverted-colour) !important;
+    background-color: var(--uc-inverted-colour) !important;
+    fill-opacity: 0.95 !important;
+
+}
+
+
+/* speaker icon colour fix */
+#TabsToolbar .tab-icon-overlay:not([crashed])[soundplaying],
+#TabsToolbar .tab-icon-overlay:not([crashed])[muted],
+#TabsToolbar .tab-icon-overlay:not([crashed])[activemedia-blocked] { color: var(--uc-inverted-colour) !important; }
+
+
+/* speaker icon colour fix on hover */
+#TabsToolbar .tab-icon-overlay:not([crashed])[soundplaying]:hover,
+#TabsToolbar .tab-icon-overlay:not([crashed])[muted]:hover,
+#TabsToolbar .tab-icon-overlay:not([crashed])[activemedia-blocked]:hover { color: var(--uc-theme-colour) !important; }
+
+
+
+
 
 #nav-bar {
-  margin-right: calc(100vw - var(--navbarWidth)) !important;
-}
 
-#urlbar-container {
-  min-width   : 0px !important;
-}
+    border:     none !important;
+    box-shadow: none !important;
+    background: transparent !important;
 
-:root[uidensity="compact"] #nav-bar {
-  margin-top  : -37px !important;
-  height      : 37px !important;
-}
-
-:root:not([uidensity="compact"]):not([uidensity="touch"]) #nav-bar {
-  margin-top  : -44px !important;
-  height      : 44px !important;
-}
-
-:root[uidensity="touch"] #nav-bar {
-  margin-top  : -49px !important;
-  height      : 49px !important;
 }
 
 
-/* Dragging space */
-:root[sizemode="maximized"] #TabsToolbar {
-  margin-top: 1px;
-}
-
-#TabsToolbar {
-  margin-top: 5px;
-}
+/* remove border below whole nav */
+#navigator-toolbox { border-bottom: none !important; }
 
 
-/* Simplifying interface */
+#urlbar,
+#urlbar * {
 
-#nav-bar {
-  background  : none !important;
-  box-shadow  : none !important;
-}
+    outline: none !important;
+    box-shadow: none !important;
 
-#navigator-toolbox {
-  border      : none !important;
-}
-
-.titlebar-spacer {
-  display     : none !important;
-}
-
-#urlbar-background {
-  border      : none !important;
-}
-
-#urlbar:not(:hover):not([breakout][breakout-extend]) > #urlbar-background {
-  box-shadow  : none !important;
-  background  : none !important;
 }
 
 
-/* Hide urlbar elements when not active */
+#urlbar-background { border: var(--uc-hover-colour) !important; }
 
-.urlbar-icon, #userContext-indicator, #userContext-label {
-  fill        : transparent !important;
-  background  : transparent !important;
-  color       : transparent !important;
+
+#urlbar[focused="true"]
+    > #urlbar-background,
+#urlbar:not([open])
+    > #urlbar-background { background: transparent !important; }
+
+
+#urlbar[open]
+    > #urlbar-background { background: var(--uc-theme-colour) !important; }
+
+
+.urlbarView-row:hover
+    > .urlbarView-row-inner,
+.urlbarView-row[selected]
+    > .urlbarView-row-inner { background: var(--uc-hover-colour) !important; }
+
+
+
+
+
+#statuspanel {
+
+    position: absolute !important;
+    bottom: 12px !important; left: 12px !important;
+
 }
 
-#urlbar:hover .urlbar-icon,
-#urlbar:active .urlbar-icon, 
-#urlbar[focused] .urlbar-icon {
-  fill        : var(--toolbar-color) !important;
+
+#statuspanel #statuspanel-label {
+
+    border: none !important;
+    border-radius: var(--uc-border-radius) !important;
+    background: var(--uc-theme-colour) !important;
+
 }
 
 
-/* animations */
-toolbarbutton,
-.toolbarbutton-icon,
-.subviewbutton,
-#urlbar-background,
-.urlbar-icon,
-#userContext-indicator,
-#userContext-label,
-.urlbar-input-box, 
-#identity-box,
-#tracking-protection-icon-container,
-[anonid=urlbar-go-button],
-.urlbar-icon-wrapper,
-#tracking-protection-icon,
-#identity-box image,
-stack,
-vbox,
-tab:not(:active) .tab-background,
-tab:not([beforeselected-visible])::after,
-tab[visuallyselected] .tab-background::before,
-tab[visuallyselected] .tab-background::before,
-.tab-close-button {
-  transition  : var(--animationSpeed) !important;
-}
+
+
+
+/* transition to oneline */
+@media (min-width: 1000px) {
+
+
+    /* move tabs bar over */
+    #TabsToolbar { margin-left: var(--uc-urlbar-width) !important; }
+
+
+    /* move entire nav bar  */
+    #nav-bar { margin: calc((var(--urlbar-min-height) * -1) - 8px) calc(100vw - var(--uc-urlbar-width)) 0 0 !important; }
+
+
+} /* end media query */
+
+
+
+
+
+/* Container Tabs */
+.identity-color-blue      { --identity-tab-color: var(--uc-identity-colour-blue)      !important; --identity-icon-color: var(--uc-identity-colour-blue)      !important; --uc-identity-gradient-colour: var(--uc-identity-colour-blue-muted) !important; }
+.identity-color-turquoise { --identity-tab-color: var(--uc-identity-colour-turquoise) !important; --identity-icon-color: var(--uc-identity-colour-turquoise) !important; --uc-identity-gradient-colour: var(--uc-identity-colour-turquoise-muted) !important;  }
+.identity-color-green     { --identity-tab-color: var(--uc-identity-colour-green)     !important; --identity-icon-color: var(--uc-identity-colour-green)     !important; --uc-identity-gradient-colour: var(--uc-identity-colour-green-muted) !important;  }
+.identity-color-yellow    { --identity-tab-color: var(--uc-identity-colour-yellow)    !important; --identity-icon-color: var(--uc-identity-colour-yellow)    !important; --uc-identity-gradient-colour: var(--uc-identity-colour-yellow-muted) !important;  }
+.identity-color-orange    { --identity-tab-color: var(--uc-identity-colour-orange)    !important; --identity-icon-color: var(--uc-identity-colour-orange)    !important; --uc-identity-gradient-colour: var(--uc-identity-colour-orange-muted) !important;  }
+.identity-color-red       { --identity-tab-color: var(--uc-identity-colour-red)       !important; --identity-icon-color: var(--uc-identity-colour-red)       !important; --uc-identity-gradient-colour: var(--uc-identity-colour-red-muted) !important;  }
+.identity-color-pink      { --identity-tab-color: var(--uc-identity-colour-pink)      !important; --identity-icon-color: var(--uc-identity-colour-pink)      !important; --uc-identity-gradient-colour: var(--uc-identity-colour-pink-muted) !important;  }
+.identity-color-purple    { --identity-tab-color: var(--uc-identity-colour-purple)    !important; --identity-icon-color: var(--uc-identity-colour-purple)    !important; --uc-identity-gradient-colour: var(--uc-identity-colour-purple-muted) !important;  }
+
