firefox: disabble webrtc indicator

--- a/.mozilla/chrome/userChrome.css
+++ b/.mozilla/chrome/userChrome.css
@@ -459,3 +459,6 @@ window,
 .identity-color-pink      { --identity-tab-color: var(--uc-identity-colour-pink)      !important; --identity-icon-color: var(--uc-identity-colour-pink)      !important; --uc-identity-gradient-colour: var(--uc-identity-colour-pink-muted) !important;  }
 .identity-color-purple    { --identity-tab-color: var(--uc-identity-colour-purple)    !important; --identity-icon-color: var(--uc-identity-colour-purple)    !important; --uc-identity-gradient-colour: var(--uc-identity-colour-purple-muted) !important;  }
 
+#webrtcIndicator {
+  display: none;
+}
